# mlnserver-web

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg_backup.json
cmake/: fmt.cmake  mlnsdk.cmake  spdlog.cmake
docker/: Dockerfile
include/enums/: myType.h
include/struct_mapping/: struct_mapping.h
include/uuidxx/: uuidxx.cpp  uuidxx.hpp
mlnserver/: CMakeLists.txt  asioContext.h  confMysql.h  confRedis.h  configuration.cpp  configuration.h  lobbyServerCoro.cpp  lobbyServerCoro.h  lobbyServerCoroInclude.h  lobbyServerMacros.h  lobbyServerUtils.h  main.cpp  netconfig.json  redisConnector.cpp  redisConnector.h  sessionManager.cpp  sessionManager.h  stringUtils.hpp  tableManager.cpp  tableManager.h
mlnserver/myDesignTable/: MyDataTable.h
mlnserver/myDesignTable/Json/: MyDataTable.json
mlnserver/myPacketHandler/: handleAccount.cpp  handleAccount.h  handlePlayer.cpp  handlePlayer.h
mlnserver/mysqlConn/: mysqlConn.cpp  mysqlConn.h  mysqlConnMgr.cpp  mysqlConnMgr.h
mlnserver/packetChecker/: packetChecker.cpp  packetChecker.h  packetChecker.sln  packetChecker.vcxproj  packetChecker.vcxproj.filters  packetCheckerBase.h
